--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel = "stylesheet" href = "./style.css">
 </head>
 <body>
+    <h2>Tu as 30 secondes pour éclater 10 bulles et passer au niveau supérieur </h2>
     <h3>0</h3>
-
+    <span class="lvl"">Niveau 1</span>
+    <div id="'timer">Timer : 30</div>
 
     <script src = "index.js"></script>
     
